[package]
name = "khf"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
embedded-io = { git = "https://github.com/euugenechou/embedded-io.git", features = ["alloc"] }
hasher = { git = "https://github.com/lemosyne/hasher.git" }
hex = "0.4.3"
persistence = { git = "https://github.com/lemosyne/persistence.git" }
kms = { git = "https://github.com/lemosyne/kms.git" }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
serde_with = "2.3.2"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.58"
clap = { version = "4.2.2", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
crossterm = "0.23"
hasher = { git = "https://github.com/lemosyne/hasher.git", features = ["openssl"] }
itertools = "0.10.5"
nom = "7.1.3"
rand = "0.8.5"
tui = "0.18.0"
unicode-width = "0.1"

[[bench]]
name = "bench_main"
harness = false
