[package]
name = "khf"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
hasher = { git = "https://github.com/lemosyne/hasher.git" }
hex = "0.4.3"
kms = { git = "https://github.com/lemosyne/kms.git" }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
serde_with = "2.3.2"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.58"
clap = { version = "4.2.2", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
crossterm = "0.23"
hasher = { git = "https://github.com/lemosyne/hasher.git" }
itertools = "0.10.5"
nom = "7.1.3"
rand = "0.8.5"
tempfile = "3.6.0"
tui = "0.18.0"
unicode-width = "0.1"

[[bench]]
name = "main"
harness = false
